<resources>
    <string name="app_name">여보게</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="google_login">구글 로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="favorite_genre">선호하는 장르</string>
    <string name="sign_up">회원가입</string>
    <string name="forgot_password_title">비밀번호를 잊으셨나요?</string>
    <string name="forgot_password_text">가입한 이메일로 임시 비밀번호를 받아주세요</string>
    <string name="send_password">임시 비밀번호 전송</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="next">다음 단계</string>
    <string name="home">홈</string>
    <string name="recommend">추천</string>
    <string name="social">소셜</string>
    <string name="profile">MY</string>
    <string name="shake_title">다같이 흔들어 보세요!</string>
    <string name="shake_text">주변에 친구를 맺은 사용자가 있다면\n자동으로 그룹 매칭이 됩니다!</string>
    <string name="add_friend">친구 추가</string>
    <string name="go_back">뒤로 가기</string>
    <string name="group_match">그룹 매칭이\n 완료되었습니다!</string>
    <string name="group_recommend">추천 받기</string>
    <string name="rematch">다시 매칭하기</string>
    <string name="match_res_title">우리를 위한 보드게임</string>
    <string name="write">플레이 기록하기</string>
    <string name="bookmark">찜하기</string>
    <string name="progress_bar">별점 매기기</string>
    <string name="chat_list">채팅 목록</string>
    <string name="friend_list">나의 친구</string>
    <string name="friend_request">친구 추가 요청</string>
    <string name="chat">채팅하기</string>
    <string name="accept">친구 요청 받기</string>
    <string name="decline">친구 요청 거절</string>
    <string name="add_friend_description">다른 사람의 닉네임을 입력해\n친구 요청을 보내 보세요!</string>
    <string name="forgot_pwd_success">이메일이 성공적으로 전송되었습니다.</string>
    <string name="forgot_pwd_fail">가입되지 않은 이메일입니다.</string>
    <string name="duplicate_check">중복\n확인</string>
    <string name="email_check_success">사용 가능한 이메일입니다.</string>
    <string name="email_check_fail">이미 사용 중인 이메일입니다.</string>
    <string name="nickname_check_success">사용 가능한 닉네임입니다.</string>
    <string name="nickname_check_fail">이미 사용 중인 닉네임입니다.</string>
    <string name="nickname_invalid">닉네임을 다시 입력해주세요. (특수문자, 띄어쓰기, 자음, 모음 불가)</string>
    <string name="password_check_fail">비밀번호가 일치하지 않습니다.</string>
    <string name="email_invalid">이메일 형식이 맞지 않습니다.</string>
    <string name="password_min_length">최소 8자 이상 입력해주세요.</string>
    <string name="unregister_title">회원 탈퇴</string>
    <string name="unregister_guideline_title">&lt; 탈퇴 안내 및 유의사항 &gt;</string>
    <string name="unregister_guideline1">1. 탈퇴 시 개인 정보는 일괄적으로 삭제되며, 복구할 수 없습니다.</string>
    <string name="unregister_guideline2">2. 찜한 보드게임, 평가한 보드게임, 친구 목록, 채팅 목록 등 모두 삭제되며, 삭제된 데이터는 복구할 수 없습니다.</string>
    <string name="unregister_guideline3">3. 탈퇴 후 동일한 메일로 재가입이 가능하지만, 탈퇴한 이전 계정과 연동되지 않습니다.</string>
    <string name="unregister_guideline4">4. 구글 로그인 회원의 경우, 모든 개인 정보가 삭제되며, 같은 구글 아이디로 재가입 시 신규 회원으로 가입됩니다.</string>
    <string name="unregister_guideline5">5. "회원 탈퇴" 버튼을 누르시면 회원 탈퇴가 완료됩니다. 탈퇴하기를 누르시면 되돌릴 수 없으니 신중히 눌러주세요.</string>
    <string name="change_password_title">비밀번호 변경</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_check">새 비밀번호 확인</string>
    <string name="change_profile_title">프로필 변경</string>
    <string name="default_image">기본 이미지로 변경</string>
    <string name="google_client_id">395302683566-paa1nctsn51t3b1c4g7kvmg18fv0ljst.apps.googleusercontent.com</string>
    <string name="difficulty">난이도</string>
    <string name="time_required">소요 시간</string>
    <string name="number_of_player">인원 수</string>
    <string name="detail_description">상세 설명</string>
    <string name="detail_strategy">사용 전략</string>
    <string name="filter">필터</string>
    <string name="genre">장르</string>
    <string name="strategy">전략</string>
    <string name="party">파티</string>
    <string name="simple">단순</string>
    <string name="license">라이선스</string>
    <string name="family">가족</string>
    <string name="kids">키즈</string>
    <string name="war">전쟁</string>
    <string name="world">세계관</string>
    <string name="google_nickname">닉네임을 입력해주세요!</string>
    <string name="google_nickname_text">앱에서 사용하실 닉네임을 10자 이내로 입력해주세요.</string>
    <string name="bookmark_boardgame">찜한 보드게임</string>
    <string name="rated_boardgame">평가한 보드게임</string>
    <string name="no_content_bookmark_text1">아직 찜한 보드게임이 없어요.</string>
    <string name="no_content_bookmark_text2">좋아하는 보드게임을 찜해보세요!</string>
    <string name="no_content_rated_text1">아직 평가한 보드게임이 없어요.</string>
    <string name="no_content_rated_text2">다양한 보드게임을 평가해보세요!</string>
    <string name="no_content_search_text1">검색 결과가 없습니다.</string>
    <string name="no_content_search_text2">다른 키워드로 찾아보거나 추천 게임을 확인해보세요!</string>
    <string name="more">더보기</string>
    <string name="not_rated">★별점을 남겨주세요</string>
    <string name="rated_5_0">★5.0 평가함</string>
    <string name="rated_4_5">★4.5 평가함</string>
    <string name="rated_4_0">★4.0 평가함</string>
    <string name="rated_3_5">★3.5 평가함</string>
    <string name="rated_3_0">★3.0 평가함</string>
    <string name="rated_2_5">★2.5 평가함</string>
    <string name="rated_2_0">★2.0 평가함</string>
    <string name="rated_1_5">★1.5 평가함</string>
    <string name="rated_1_0">★1.0 평가함</string>
    <string name="rated_0_5">★0.5 평가함</string>
    <string name="rated_nothing">해당 점수로 평가한 보드게임이 없습니다.</string>
    <string name="no_friend">아직 친구가 없어요.</string>
    <string name="no_friend_request_text1">현재 받은 친구 요청이 없어요.</string>
    <string name="no_friend_request_text2">함께 보드게임을 즐길 친구를 찾아보세요!</string>
    <string name="no_chat_list_text1">채팅 목록이 비어있습니다.</string>
    <string name="no_chat_list_text2">친구에게 먼저 메시지를 보내 대화를 시작해보세요!</string>
    <string name="send_message">메시지를 입력하세요.</string>
    <string name="rec_list">추천 받은 보드게임</string>
    <string name="rec_timeline">그룹 추천 타임라인</string>
    <string name="no_content_recommend_text1">최근에 추천 받은 보드게임이 없어요.</string>
    <string name="no_content_recommend_text2">친구들과 함께 그룹 추천을 받아보세요!</string>
    <string name="friends_rating">친구들의 평가</string>
    <string name="ask_review">물어보기</string>
    <string name="access_permission_title">앱 접근 권한 안내</string>
    <string name="permission_required">필수 접근 권한</string>
    <string name="permission_optional">선택 접근 권한</string>
    <string name="location">위치</string>
    <string name="gallery">사진/미디어/파일</string>
    <string name="notification">알림</string>
    <string name="confirm">확인</string>
    <string name="location_feature">그룹 매칭</string>
    <string name="gallery_feature">프로필 사진 등록</string>
    <string name="notification_feature">채팅, 친구 요청, 평가 요청 알림</string>
    <string name="guide1">•권한을 거부할 경우 해당 기능이 정상적으로 작동하지 않습니다.</string>
    <string name="guide2">•접근 권한 변경 방법: 설정 > 여보게 > 권한</string>
</resources>