<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/icon_home"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/recommendFragment"
        android:title="@string/recommend"
        android:icon="@drawable/icon_recommend"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/socialFragment"
        android:title="@string/social"
        android:icon="@drawable/icon_social"
        android:menuCategory="secondary"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"
        android:menuCategory="secondary"/>

</menu>