<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:text="@string/access_permission_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/permission_required"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <!-- 위치 권한 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:src="@drawable/icon_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/location"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:text="@string/location_feature"
                android:textSize="12sp"
                android:textColor="@color/detailColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <!-- 사진/미디어/파일 권한 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:src="@drawable/icon_gallery"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/gallery"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:text="@string/gallery_feature"
                android:textSize="12sp"
                android:textColor="@color/detailColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/permission_optional"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <!-- 사진/미디어/파일 권한 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:src="@drawable/icon_notification"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/notification"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:text="@string/notification_feature"
                android:textSize="12sp"
                android:textColor="@color/detailColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/guide1"
        android:textSize="10sp"
        android:textColor="@color/detailColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:text="@string/guide2"
        android:textSize="10sp"
        android:textColor="@color/detailColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/confirmBtn"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/button_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>