<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpFragment1">

    <!-- 로딩중 -->
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/custom_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 뒤로가기 버튼 -->
    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/button_transparent"
        android:contentDescription="@string/go_back"
        android:scaleType="fitXY"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 회원가입 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!-- 이메일 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="4.5"
            android:gravity="center">

            <!-- 이메일 입력창 -->
            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_white"
                android:hint="@string/email"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:layout_weight="3.5"
                android:layout_marginEnd="5dp"/>

            <!-- 이메일 중복 확인 버튼 -->
            <Button
                android:id="@+id/emailCheck"
                android:text="@string/duplicate_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_color"
                android:textSize="12sp"
                android:textStyle="bold"
                android:enabled="false"/>

        </LinearLayout>

        <!-- 이메일 중복 확인 성공 메세지 -->
        <TextView
            android:id="@+id/emailCheckSuccess"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/email_check_success"
            android:textColor="@color/blue"
            android:textSize="11sp"
            android:visibility="gone"/>

        <!-- 이메일 형식 에러 -->
        <TextView
            android:id="@+id/emailInvalid"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/email_invalid"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="gone"/>

        <!-- 이메일 중복 확인 실패 메세지 -->
        <TextView
            android:id="@+id/emailCheckFail"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/email_check_fail"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="gone"/>

        <!-- 비밀번호 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- 비밀번호 입력창 -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textSize="12sp"
            android:maxLength="100"/>

        <!-- 비밀번호 최소 길이 메세지 -->
        <TextView
            android:id="@+id/passwordMinLength"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_min_length"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="gone"/>

        <!-- 비밀번호 확인 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/check_password"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- 비밀번호 확인 입력창 -->
        <EditText
            android:id="@+id/passwordCheck"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_white"
            android:hint="@string/check_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textSize="12sp" />

        <!-- 비밀번호 확인 실패 메세지 -->
        <TextView
            android:id="@+id/passwordCheckFail"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password_check_fail"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="gone"/>

        <!-- 닉네임 타이틀 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!-- 닉네임 입력창 -->
        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_white"
            android:hint="@string/nickname"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textSize="12sp"
            android:maxLength="10"/>

        <!-- 닉네임 형식 에러 -->
        <TextView
            android:id="@+id/nicknameInvalid"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nickname_invalid"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:visibility="gone"/>

        <!-- 다음 단계 버튼 -->
        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:text="@string/next"
            android:textSize="15sp"
            android:textStyle="bold"
            android:enabled="false"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <!-- 가이드라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

</androidx.constraintlayout.widget.ConstraintLayout>